# xdb

./: CMakeLists.txt  vcpkg.json
include/libxdb/: bit.hpp  error.hpp  libxdb.hpp  pipe.hpp  process.hpp  register_info.hpp  registers.hpp  types.hpp
include/libxdb/detail/: register.inc
scripts/: build_all.sh  clean.sh
src/: CMakeLists.txt  libxdb.cpp  pipe.cpp  process.cpp  registers.cpp
test/: CMakeLists.txt  tests.cpp
test/targets/: CMakeLists.txt  reg_write.s  run_endlessly.cpp
tools/: CMakeLists.txt  xdb.cpp
